# lgtstep

./: base_classes.lgt  base_types.lgt  data_model.lgt  entities_203.lgt  functions_203.lgt  hook.lgt  loader.lgt  parametric_203.lgt  rules_203.lgt  type_checking.lgt  types_203.lgt  validated.lgt
read_exchange_structure/: .cvsignore  Makefile.am  configure  readme.html
read_exchange_structure/Source/: ASCII_codes.h  AttributeValue.h  BaseExchangeStructureHandler.cpp  BaseExchangeStructureHandler.h  BasicTokenTests.cpp  BasicTokenTests.h  BufferTextSource.h  CatalogSchemaServer.cpp  CatalogSchemaServer.h  CharToken.h  CharTokenImpl.cpp  CharTokenList.cpp  CharTokenList.h  EXPRESS_TokenSource.cpp  EXPRESS_TokenSource.h  EncodingToProlog.cpp  EncodingToProlog.h  EntityFilterChoice.cpp  EntityFilterChoice.h  ExchangeDataManager.cpp  ExchangeDataManager.h  ExchangeSchema.h  ExchangeSchemaImpl.cpp  ExchangeSchemaImpl.h  Fd_TextSource.cpp  FixedSchemaServer.cpp  FixedSchemaServer.h  Header.h  IConvClass.cpp  IConvClass.h  InputSource.h  InstanceID.h  KShellexcept.cpp  KShellexcept.h  KShellexceptImpl.cpp  KShellexceptImpl.h  LogtalkExchangeStructureHandler.cpp  LogtalkExchangeStructureHandler.h  ModelBaseExchangeStructureHandler.cpp  ModelBaseExchangeStructureHandler.h  (+37 more)
read_exchange_structure/express_schema/: schema_catalog.xml
read_exchange_structure/part21_files/: Part02.step
